data/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Opportunity</fullName>
        <description>This is a standard opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Cumulative_Change_of_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative Change of Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Support_Teams__c</fullName>
        <label>Deal Support Teams</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Management_Approval_Required__c</fullName>
        <description>This field will be used in the entry criteria for the Approval process</description>
        <formula>(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;) &amp;&amp; Amount &gt; 100000) ||
(ISPICKVAL(CurrencyIsoCode, &quot;EUR&quot;) &amp;&amp; Amount &gt; 50000) || 
(ISPICKVAL(CurrencyIsoCode, &quot;JPY&quot;) &amp;&amp; Amount &gt; 100000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box that shows if the opportunity was approved by management</description>
        <label>Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_times_Amount_Changed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of times Amount Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email_Address__c</fullName>
        <label>Owner Manager Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_List__c</fullName>
        <label>Product List</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>APAC_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Use this for APAC Opportunities</description>
        <label>APAC Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Use this for EMEA Opportunities</description>
        <label>EMEA Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quota</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Used for setting quotas for each quarter</description>
        <label>Quota</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Used for standard opportunity</description>
        <label>Standard Opportunity</label>
    </recordTypes>
    <validationRules>
        <fullName>Check_Currency_Code_for_APAC</fullName>
        <active>true</active>
        <description>All APAC Opportunities should be only in JPY</description>
        <errorConditionFormula>CONTAINS(Owner.UserRole.Name, &quot;APAC&quot;) &amp;&amp; NOT ISPICKVAL(CurrencyIsoCode, &quot;JPY&quot;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Assigned Opportunity owner&apos;s role belongs to APAC hierarchy. So the Opportunity currency should be JPY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Currency_Code_for_EMEA</fullName>
        <active>true</active>
        <description>All EMEA Opportunities should be only in EUR</description>
        <errorConditionFormula>CONTAINS(Owner.UserRole.Name, &quot;EMEA&quot;) &amp;&amp; NOT ISPICKVAL(CurrencyIsoCode, &quot;EUR&quot;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Assigned Opportunity owner&apos;s role belongs to EMEA hierarchy. So the Opportunity currency should be EUR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Currency_Code_for_Standard</fullName>
        <active>true</active>
        <description>All Standard Opportunities should be only in USD</description>
        <errorConditionFormula>NOT CONTAINS(Owner.UserRole.Name, &quot;APAC&quot;) &amp;&amp; NOT CONTAINS(Owner.UserRole.Name, &quot;EMEA&quot;) &amp;&amp; NOT ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Assigned Opportunity owner&apos;s role doesn&apos;t belongs to APAC/EMEA hierarchy. So the Opportunity currency should be USD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Management_Approval</fullName>
        <active>true</active>
        <description>Before the opportunity can be Closed/Won, Management approval should be obtained</description>
        <errorConditionFormula>IsWon &amp;&amp; Management_Approval__c &lt;&gt; True</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>This Opportunity requires Management Approval. Please submit the opportunity for approval before moving it to &quot;Closed Won&quot; stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Line_Deletion</fullName>
        <active>false</active>
        <description>Prevents users from deleting opportunity products after an opportunity is closed. Create the following validation rule example on opportunities. It uses a custom roll-up summary field on opportunities that counts the number of   opportunity products</description>
        <errorConditionFormula>IsClosed &amp;&amp; Line_Item_Count__c &lt; PRIORVALUE(Line_Item_Count__c)</errorConditionFormula>
        <errorMessage>Opportunity Line Items cannot be deleted because the Opportunity is closed.</errorMessage>
    </validationRules>
</CustomObject>